--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@ceramicnetwork/http-client": "^2.23.0",
+    "@composedb/client": "^0.4.4",
     "@composedb/devtools": "^0.4.4",
     "@composedb/devtools-node": "^0.4.4",
     "dids": "^3.2.0",
@@ -18,6 +19,7 @@
     "shelljs": "^0.8.5"
   },
   "devDependencies": {
+    "@composedb/types": "^0.4.4",
     "key-did-provider-ed25519": "^2.0.1",
     "key-did-resolver": "^2.1.3",
     "uint8arrays": "^4.0.4"
