--- a/client/package.json
+++ b/client/package.json
@@ -40,10 +40,10 @@
     "@types/shelljs": "^0.8.12",
     "eslint": "^8.3.0",
     "eslint-config-next": "^12.0.4",
+    "fs": "^0.0.1-security",
     "key-did-provider-ed25519": "^2.0.1",
     "key-did-resolver": "^2.1.3",
     "typescript": "^4.5.2",
-    "uint8arrays": "^4.0.2",
-    "fs": "^0.0.1-security"
+    "uint8arrays": "^4.0.2"
   }
 }
