--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "simpledeploy",
+  "name": "delegate-simpledeploy",
   "version": "1.0.0",
   "description": "This repository contains scripts to help with the deployment of Ceramic nodes.",
   "main": "run.js",
